# rust-ibkr-cpapi

./: .gitignore  Cargo.toml  Makefile.toml  README.md  doc.json  generator_config.yaml
.openapi-generator/: FILES
docs/: Account.md  AccountApi.md  AccountParent.md  AlertApi.md  AlertRequest.md  AlertRequestConditionsInner.md  AlertResponse.md  AlertResponseConditionsInner.md  AllocationInner.md  AllocationInnerAssetClass.md  AllocationInnerAssetClassLong.md  AllocationInnerAssetClassShort.md  AllocationInnerGroup.md  AllocationInnerGroupLong.md  AllocationInnerGroupShort.md  AllocationInnerSector.md  AllocationInnerSectorLong.md  AllocationInnerSectorShort.md  CalendarRequest.md  CcpAccountGet200Response.md  CcpAccountGet200ResponseAcctListInner.md  CcpAuthInitPost200Response.md  CcpAuthResponsePost200Response.md  CcpAuthResponsePostRequest.md  CcpBetaApi.md  CcpOrdersGet200Response.md  CcpStatusGet200Response.md  Contract.md  ContractApi.md  ContractRules.md  EventsInner.md  FuturesInner.md  FyiApi.md  FyiDeliveryoptionsDevicePostRequest.md  FyiDeliveryoptionsGet200Response.md  FyiDeliveryoptionsGet200ResponseEInner.md  FyiDisclaimerTypecodeGet200Response.md  FyiDisclaimerTypecodePut200Response.md  FyiSettingsGet200ResponseInner.md  FyiSettingsTypecodePostRequest.md  (+122 more)
src/apis/: account_api.rs  alert_api.rs  ccp_beta_api.rs  configuration.rs  contract_api.rs  fyi_api.rs  market_data_api.rs  mod.rs  order_api.rs  pn_l_api.rs  portfolio_analyst_api.rs  portfolio_api.rs  scanner_api.rs  session_api.rs  streaming_api.rs  trades_api.rs
(+154 files in other folders)
